Add Identity database

--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -4,6 +4,9 @@
     "Description": "Online Learning WebApp Monolith application with Domain-Driven Design and CQRS based on .Net",
     "ApiAddress": "http://localhost:5000"
   },
+  "mssql": {
+    "ConnectionString": "Data Source=localhost;Initial Catalog=OnlineStore;Integrated Security=True;Connect Timeout=30"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
