--- a/src/Modules/Identity/Pada.Modules.Identity.Domain/Pada.Modules.Identity.Domain.csproj
+++ b/src/Modules/Identity/Pada.Modules.Identity.Domain/Pada.Modules.Identity.Domain.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\..\..\Shared\Pada.Infrastructure\Pada.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Aggregates\Users\DomainEvents" />
+      <Folder Include="Aggregates\Users\DomainExceptions" />
+      <Folder Include="Aggregates\Users\Types" />
+    </ItemGroup>
+
 </Project>
