--- a/src/Modules/Identity/Pada.Modules.Identity.Infrastructure/Pada.Modules.Identity.Infrastructure.csproj
+++ b/src/Modules/Identity/Pada.Modules.Identity.Infrastructure/Pada.Modules.Identity.Infrastructure.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Pada.Modules.Identity.Application\Pada.Modules.Identity.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
