Add database connections

--- a/src/Bootstrapper/eLearn.Api/eLearn.Api.csproj
+++ b/src/Bootstrapper/eLearn.Api/eLearn.Api.csproj
@@ -11,4 +11,11 @@
       <ProjectReference Include="..\..\Modules\Identity\Pada.Modules.Identity.Api\Pada.Modules.Identity.Api.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
