--- a/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
+++ b/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
@@ -13,7 +13,11 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.1.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+      <PackageReference Include="dbup-sqlserver" Version="4.5.0" />
       <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="3.1.4" />
+      <PackageReference Include="EntityFrameworkCore.Triggered" Version="3.0.0" />
+      <PackageReference Include="EntityFrameworkCore.Triggered.Abstractions" Version="3.0.0" />
+      <PackageReference Include="EntityFrameworkCore.Triggered.Extensions" Version="3.0.0" />
       <PackageReference Include="Figgle" Version="0.4.0" />
       <PackageReference Include="FluentValidation" Version="10.3.4" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
@@ -21,6 +25,15 @@
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Scrutor" Version="3.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Persistence\Mssql\Scripts\outbox.sql" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Domain\Types" />
     </ItemGroup>
 
 </Project>
