Add Register User Features

--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -7,6 +7,22 @@
   "MssqlOptions": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=OnlineLearning;Integrated Security=True;Connect Timeout=30"
   },
+  "IdentityOptions": {
+    "Password": {
+      "RequiredLength": 6,
+      "RequireDigit": false,
+      "RequireNonAlphanumeric": false
+    },
+    "User": {
+      "MaxPasswordAge": "0",
+      "RequireUniqueEmail": true
+    },
+    "Lockout": {
+      "DefaultLockoutTimeSpan": "0:15:0",
+      "AllowedForNewUsers": true,
+      "MaxFailedAccessAttempts": 3
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
