Remove unused exception code

--- a/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
+++ b/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
@@ -38,6 +38,7 @@
 
     <ItemGroup>
       <Folder Include="Domain\Types" />
+      <Folder Include="Messaging\Events" />
     </ItemGroup>
 
 </Project>
