--- a/src/Shared/Pada.Abstractions/Pada.Abstractions.csproj
+++ b/src/Shared/Pada.Abstractions/Pada.Abstractions.csproj
@@ -13,5 +13,9 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Messaging" />
+    </ItemGroup>
     
 </Project>
