--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -23,11 +23,45 @@
       "MaxFailedAccessAttempts": 3
     }
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LoggerOptions": {
+    "level": "information",
+    "overrides": {
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
+    },
+    "excludePaths": [
+      "/",
+      "/ping",
+      "/metrics"
+    ],
+    "excludeProperties": [
+      "api_key",
+      "access_key",
+      "ApiKey",
+      "ApiSecret",
+      "ClientId",
+      "ClientSecret",
+      "ConnectionString",
+      "Password",
+      "Email",
+      "Login",
+      "Secret",
+      "Token"
+    ],
+    "console": {
+      "enabled": true
+    },
+    "file": {
+      "enabled": true,
+      "path": "logs/logs.txt",
+      "interval": "day"
+    },
+    "seq": {
+      "enabled": true,
+      "url": "http://localhost:5341",
+      "apiKey": "secret"
+    },
+    "tags": {}
   },
   "AllowedHosts": "*"
 }
