--- a/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
+++ b/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="EntityFrameworkCore.Triggered.Abstractions" Version="3.0.0" />
       <PackageReference Include="EntityFrameworkCore.Triggered.Extensions" Version="3.0.0" />
       <PackageReference Include="Figgle" Version="0.4.0" />
+      <PackageReference Include="FluentResults" Version="3.0.0" />
       <PackageReference Include="FluentValidation" Version="10.3.4" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
       <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.2.0" />
