--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -23,6 +23,40 @@
       "MaxFailedAccessAttempts": 3
     }
   },
+  "easycaching": {
+    "mem": {
+      "MaxRdSecond": 120,
+      "EnableLogging": false,
+      "LockMs": 5000,
+      "SleepMs": 300,
+      "DBConfig": {
+        "SizeLimit": 10000,
+        "ExpirationScanFrequency": 60,
+        "EnableReadDeepClone": true,
+        "EnableWriteDeepClone": false
+      }
+    },
+    "redis": {
+      "MaxRdSecond": 120,
+      "EnableLogging": false,
+      "LockMs": 5000,
+      "SleepMs": 300,
+      "dbconfig": {
+        "Password": null,
+        "IsSsl": false,
+        "SslHost": null,
+        "ConnectionTimeout": 5000,
+        "AllowAdmin": true,
+        "Endpoints": [
+          {
+            "Host": "localhost",
+            "Port": 6739
+          }
+        ],
+        "Database": 0
+      }
+    }
+  },
   "LoggerOptions": {
     "level": "information",
     "overrides": {
