Add Auth Features

--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -23,6 +23,14 @@
       "MaxFailedAccessAttempts": 3
     }
   },
+  "AliyunSmsOptions": {
+    "RegionId": "default",
+    "AccessKeyId": "LTAI8v8Crr******", 
+    "AccessKeySecret": "BVZY9tPKjNsuAg2njEgZa1KI******",
+    "TemplateCode": "SMS_70055704",
+    "SignName": "Pada",
+    "IsTest": true 
+  },
   "easycaching": {
     "mem": {
       "MaxRdSecond": 120,
