--- a/src/Modules/Identity/Pada.Modules.Identity.Application/Pada.Modules.Identity.Application.csproj
+++ b/src/Modules/Identity/Pada.Modules.Identity.Application/Pada.Modules.Identity.Application.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\Pada.Modules.Identity.Domain\Pada.Modules.Identity.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Authentication\Contracts" />
+      <Folder Include="Authentication\Exceptions" />
+      <Folder Include="Authentication\Mappings" />
+    </ItemGroup>
+
 </Project>
