--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -23,6 +23,18 @@
       "MaxFailedAccessAttempts": 3
     }
   },
+  "JwtOptions": {
+    "issuerSigningKey": "50d14aWf9FrMwc7SOLoz",
+    "issuer": "online-store",
+    "validIssuer": "online-store",
+    "audience": "online-store",
+    "validAudience": "online-store",
+    "validateAudience": true,
+    "validateIssuer": true,
+    "validateLifetime": true,
+    "expiryMinutes": "120",
+    "RefreshTokenTTL": 1
+  },
   "AliyunSmsOptions": {
     "RegionId": "default",
     "AccessKeyId": "LTAI8v8Crr******", 
