--- a/src/Shared/Pada.Abstractions/Pada.Abstractions.csproj
+++ b/src/Shared/Pada.Abstractions/Pada.Abstractions.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.14.1" />
     </ItemGroup>
 
     <ItemGroup>
