--- a/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
+++ b/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="EasyCaching.Core" Version="1.4.1" />
       <PackageReference Include="EasyCaching.InMemory" Version="1.4.1" />
       <PackageReference Include="EasyCaching.Redis" Version="1.4.1" />
+      <PackageReference Include="EasyCaching.Serialization.MessagePack" Version="1.4.1" />
       <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="3.1.4" />
       <PackageReference Include="EntityFrameworkCore.Triggered" Version="3.0.0" />
       <PackageReference Include="EntityFrameworkCore.Triggered.Abstractions" Version="3.0.0" />
@@ -29,6 +30,7 @@
       <PackageReference Include="Humanizer" Version="2.13.14" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
