Add email confirm

--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -35,6 +35,15 @@
     "expiryMinutes": "120",
     "RefreshTokenTTL": 1
   },
+  "MailOptions": {
+    "From": "info@online-store.com",
+    "Host": "smtp.ethereal.email",
+    "Port": 587,
+    "UserName": "justina.white@ethereal.email",
+    "Password": "Zdecj2Qq8SZHqgvcb9",
+    "DisplayName": "Online Store Mail",
+    "Enable": true
+  },
   "AliyunSmsOptions": {
     "RegionId": "default",
     "AccessKeyId": "LTAI8v8Crr******", 
