--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AppOptions": {
-    "Name": "Online Learning WebApp",
-    "Description": "Online Learning WebApp Monolith application with Domain-Driven Design and CQRS based on .Net",
-    "ApiAddress": "http://localhost:5000"
+    "Name": "Pada Online Learning WebApp",
+    "Description": "Pada Online Learning WebApp Monolith application with Domain-Driven Design and CQRS based on .Net",
+    "ApiAddress": "http://localhost:465"
   },
   "MssqlOptions": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=OnlineLearning;Integrated Security=True;Connect Timeout=30"
@@ -36,12 +36,11 @@
     "RefreshTokenTTL": 1
   },
   "MailOptions": {
-    "From": "info@online-store.com",
-    "Host": "smtp.ethereal.email",
-    "Port": 587,
-    "UserName": "justina.white@ethereal.email",
-    "Password": "Zdecj2Qq8SZHqgvcb9",
-    "DisplayName": "Online Store Mail",
+    "From": "2713766100@qq.com",
+    "Host": "smtp.qq.com",
+    "Port": 465,
+    "UserName": "2713766100@qq.com",
+    "DisplayName": "biowell academy",
     "Enable": true
   },
   "AliyunSmsOptions": {
