Add hangfire background services to send mail

--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -2,7 +2,7 @@
   "AppOptions": {
     "Name": "Pada Online Learning WebApp",
     "Description": "Pada Online Learning WebApp Monolith application with Domain-Driven Design and CQRS based on .Net",
-    "ApiAddress": "http://localhost:465"
+    "ApiAddress": "http://localhost:5000"
   },
   "MssqlOptions": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=OnlineLearning;Integrated Security=True;Connect Timeout=30"
@@ -89,7 +89,8 @@
     "level": "information",
     "overrides": {
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
-      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning",
+      "Hangfire": "Warning"
     },
     "excludePaths": [
       "/",
