--- a/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
+++ b/src/Shared/Pada.Infrastructure/Pada.Infrastructure.csproj
@@ -27,6 +27,7 @@
       <PackageReference Include="FluentResults" Version="3.0.0" />
       <PackageReference Include="FluentValidation" Version="10.3.4" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
+      <PackageReference Include="Hangfire" Version="1.7.27" />
       <PackageReference Include="Humanizer" Version="2.13.14" />
       <PackageReference Include="MailKit" Version="2.15.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
