--- a/src/Bootstrapper/eLearn.Api/appsettings.json
+++ b/src/Bootstrapper/eLearn.Api/appsettings.json
@@ -7,6 +7,9 @@
   "MssqlOptions": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=OnlineLearning;Integrated Security=True;Connect Timeout=30"
   },
+  "HangfireOptions": {
+    "ConnectionString": "Data Source=localhost;Initial Catalog=OnlineLearning;Integrated Security=True;Connect Timeout=30"
+  },
   "IdentityOptions": {
     "Password": {
       "RequiredLength": 6,
@@ -22,6 +25,11 @@
       "AllowedForNewUsers": true,
       "MaxFailedAccessAttempts": 3
     }
+  },
+  "OutboxOptions": {
+    "enabled": true,
+    "collectionName": "outbox",
+    "interval": "00:00:01"
   },
   "JwtOptions": {
     "issuerSigningKey": "50d14aWf9FrMwc7SOLoz",
